# game_clones

pong/: CMakeLists.txt
pong/include/: ball.hpp  player.hpp
pong/src/: ball.cpp  main.cpp  player.cpp
pong_v1/: CMakeLists.txt
pong_v1/src/: main.cpp  player.cpp
pong_v2/: CMakeLists.txt
pong_v2/.cache/clangd/index/: ball.cpp.D41F946E7F64844E.idx  ball.hpp.D65D8C5111925972.idx  consts.hpp.69765F57EE323895.idx  game.cpp.FE7BCAF031469872.idx  game.hpp.4B077766ABC1C2D9.idx  main.cpp.B561F86C7CDC10A0.idx  math_utils.hpp.247FA9F81E450DF8.idx  paddle.cpp.A84FF51C56DD1C04.idx  paddle.hpp.CFE9C2AA221CF41E.idx  scores.cpp.20995D2251FB3B63.idx  scores.hpp.5FBF1D2C3D58A67D.idx
pong_v2/include/: ball.hpp  consts.hpp  entity.hpp  game.hpp  math_utils.hpp  paddle.hpp  scores.hpp
pong_v2/src/: ball.cpp  game.cpp  main.cpp  paddle.cpp  scores.cpp
